# fadecandy

./: .gitmodules
examples/python/: gradient.py  gradient_data.py  measuring-stick.py  opc.py  solid-color.py
server/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  autogen.sh  config-mixed-order.json  configure.ac
server/contrib/: 60-fadecandy.rules  Makefile.flat
server/http/: manifest.py
server/libwebsockets/: base64-decode.c  client-handshake.c  client.c  libwebsockets.c  libwebsockets.h  minilex.c  output.c  parsers.c  private-libwebsockets.h
server/rapidjson/: document.h  reader.h  readme-rapidjson.txt
server/src/: enttecdmxdevice.cpp  enttecdmxdevice.h  fcdevice.cpp  fcdevice.h  fcserver.cpp  main.cpp  opc.h  tcpnetserver.cpp  tcpnetserver.h  usbdevice.cpp  usbdevice.h  version.cpp
